fixed card-text overflow in AlbumCards

--- a/src/components/AlbumCards.css
+++ b/src/components/AlbumCards.css
@@ -25,6 +25,13 @@
   box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, .25);
 }
 
+.card-text {
+  white-space: nowrap;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   max-width: 170px;
+}
+
 .secondary-text {
   font-weight: 100;
 }
